--- a/test/samples/test0.ui
+++ b/test/samples/test0.ui
@@ -10,8 +10,10 @@ ShinyView {
         height: 10
 
         UIButton headerButton {
-            x: 0, y: 0
-            width: 0, height: 0
+            x: 10
+            y: 20
+            width: 40
+            height: 30
         }
     }
 
